--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,12 @@ num-complex = "0.4"
 md5 = "0.7.0" # used as a fallback for fingerprinting PDF files
 
 [target.'cfg(unix)'.dependencies]
-mupdf = {version = "0.1.2", features=["sys-lib-freetype", "sys-lib-harfbuzz"]}
-# mupdf = { path = "../mupdf-rs/", features=["sys-lib-freetype", "sys-lib-harfbuzz"] }
+#mupdf = {version = "0.1.2", features=["sys-lib-freetype", "sys-lib-harfbuzz"]}
+mupdf = { path = "../mupdf-rs/", features=["sys-lib-freetype", "sys-lib-harfbuzz"] }
 
 [target.'cfg(not(unix))'.dependencies]
-mupdf = {version = "0.1.2"}
-
+#mupdf = {version = "0.1.2"}
+mupdf = { path = "../mupdf-rs/" }
 
 # [target.x86_64-unknown-linux-gnu]
 # rustflags = ["-Clink-arg=-fuse-ld=lld"]
